Set main body to display as flex to stretch properly (until Foundation 6 fixes their custom downloader)

--- a/css/main.scss
+++ b/css/main.scss
@@ -107,6 +107,8 @@ header .top-bar {
 body > main {
   background: rgba(white, .5);
 
+  &.align-stretch { display: flex; }
+
   .columns {
     padding: 1rem;
   }
